--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@nlpjs/core": "^4.23.4",
+    "@tensorflow-models/qna": "^1.0.1",
+    "@tensorflow/tfjs": "^3.20.0",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
     "classifier.js": "^1.0.4",
@@ -12,6 +14,7 @@
     "node-html-parser": "^6.0.0",
     "node-nlp": "^4.24.0",
     "telegraf": "^4.9.1",
+    "tensorflow-qna-local-model": "^1.0.2",
     "unfluff": "^3.2.0",
     "wikijs": "^6.3.3"
   },
